tests/valid/StaticVar_Valid_2.whiley
int[] x = [1,2,3]

method test():
    assert x == [1,2,3]