tests/invalid/ListElemOf_Invalid_2.whiley

function f(int x) -> void:
    assert x in [1, 2, 3]
